    - Added the advanced recipe for yttrium. Yes it took this long to get to where you unlock it!
    - Added YAG:Ce lasers, which act as productivity modules in electronic laser etchers, with an even bigger energy cost.
    - Finally PM-ified the spidertron.
    - Added advanced LDS recipes.
    - Added the final tier of science recipes, which makes use of a lot more elements ;)

  Changes:
    - Updated the two steel items graphics and their technology icons.
    - Moved noble gas producitvity research to be behind lathanides.

---------------------------------------------------------------------------------------------------
Version: 0.8.005
Date: 2025-23-12
  The christmas eve eve miracle! bugfixes! Update:

  Changes:
    - PM-ified the recipes for heat exchanger 1's and steam turbines.
    - Lowered the cost of heat exchanger 2's.
    - Lowered the amount of power tidal plants make from 330kW to 250kW.

  Fixes:
    - Fixed ethylolamine not outputting the right amount of catalyst containers.
    - Fixed yttrium not removing all catalyst containers from productivity.

---------------------------------------------------------------------------------------------------
Version: 0.8.004
Date: 2025-22-12
  The i forgot i made them solars then EEI's then solars Update:

  Fixes:
    - Fixed tidal power plants not actually producing power.

---------------------------------------------------------------------------------------------------
Version: 0.8.003
Date: 2025-21-12
  The old chlorine ways but not really Update:

  Additons:
    - Added a water electrolysis recipe that only takes water as an input, but has solid byproducts.

  Fixes:
    - Fixed "Research with" achivements all checking for advanced-advanced TM.

---------------------------------------------------------------------------------------------------
Version: 0.8.002
Date: 2025-19-12
  The boulder has already begun rolling to 0.9 Update:

  Additons: