@@ -7760,6 +7760,36 @@ data:extend({
       time = 160
     }
   },
+  {
+    type = "technology",
+    name = "pm-asteriod-mining",
+    icon_size = 256,
+    icon = "__periodic-madness__/graphics/icons/placeholder-tech.png",
+    effects =
+    {
+    },
+    prerequisites = {"pm-space-processing-units", "pm-high-density-structure", "pm-advanced-LDS-production"},
+    unit =
+    {
+      count = 1000,
+      ingredients =
+      {
+        {"automation-science-pack", 2},
+        {"logistic-science-pack", 2},
+        {"pm-advanced-advanced-transition-metal-science-pack", 2},
+        {"chemical-science-pack", 1},
+        {"pm-post-transition-metal-science-pack", 1},
+        {"pm-alkali-metal-science-pack", 1},
+        {"pm-metalloid-science-pack", 1},
+        {"pm-alkaline-earth-metal-science-pack", 1},
+        {"pm-advanced-advanced-advanced-transition-metal-science-pack", 1},
+        {"pm-noble-gas-science-pack", 1},
+        {"pm-lathanide-science-pack", 1},
+        {"space-science-pack", 1}
+      },
+      time = 240
+    }
+  },
 
 --anything behind this line should take double of TM/ATM/AATM science
 --MARK: LA science
@@ -7991,6 +8021,35 @@ data:extend({
         {"pm-lathanide-science-pack", 1}
       },
       time = 180
+    }
+  },
+  {
+    type = "technology",
+    name = "pm-advanced-LDS-production",
+    icon_size = 256,
+    icon = "__periodic-madness__/graphics/icons/placeholder-tech.png",
+    effects = 
+    {
+    },
+    prerequisites = {"pm-scandium-processing"},
+    unit =
+    {
+      count = 900,
+      ingredients =
+      {
+        {"automation-science-pack", 2},
+        {"logistic-science-pack", 2},
+        {"pm-advanced-advanced-transition-metal-science-pack", 2},
+        {"chemical-science-pack", 1},
+        {"pm-post-transition-metal-science-pack", 1},
+        {"pm-alkali-metal-science-pack", 1},
+        {"pm-metalloid-science-pack", 1},
+        {"pm-alkaline-earth-metal-science-pack", 1},
+        {"pm-advanced-advanced-advanced-transition-metal-science-pack", 1},
+        {"pm-noble-gas-science-pack", 1},
+        {"pm-lathanide-science-pack", 1}
+      },
+      time = 200
     }
   },
 
